Made the augmented controller default

--- a/fetch_bringup/config/default_controllers.yaml
+++ b/fetch_bringup/config/default_controllers.yaml
@@ -15,7 +15,8 @@ arm_controller:
     tip: "gripper_link"
     autostart: true
   cartesian_twist:
-    type: "robot_controllers/CartesianTwistController"
+    type: "augmented_robot_controllers/CartesianTwistAvoidController"
+    #type: "robot_controllers/CartesianTwistController"
     root_name: torso_lift_link 
     tip_name: wrist_roll_link
 
