--- a/fetch_bringup/package.xml
+++ b/fetch_bringup/package.xml
@@ -20,6 +20,9 @@
   <run_depend>robot_controllers_msgs</run_depend>
   <run_depend>robot_state_publisher</run_depend>
   <run_depend>sensor_msgs</run_depend>
+
+  <run_depend>augmented_robot_controllers</run_depend>
+
   <run_depend version_gte="0.0.4">sick_tim</run_depend>
   <run_depend version_gt="1.6.0">sixad</run_depend>
 </package>
